crates/ai/src/discovery/probe/snapshots/omp_ai__discovery__probe__characterization__lm_studio_models.snap
---
source: crates/ai/src/discovery/probe/characterization.rs
expression: output
---
## documented listing
> GET http://127.0.0.1:1234/api/v0/models [-] 
{"provider":"lm-studio","route":"lm-studio/primary","wire_model":"deepseek-r1-distill","aliases":[],"display_name":null,"declared_class":null,"declared_operations":1,"declared_capabilities":{"operations":1,"chat":{"roles":"unknown","mid_session_roles":"unknown","tools":"unknown","structured_output":"unknown","grammar":"unknown","text_verbosity":"unknown","reasoning":{"native":{"features":1,"efforts":[],"minimum_budget_tokens":null,"maximum_budget_tokens":null}},"input_modalities":"unknown","image_input":"unknown","hosted_tools":"unknown","prompt_caching":"unknown","service_tiers":"unknown","sampling":"unknown","safety":"unknown","determinism":"unknown","server_state":"unknown","logprobs":"unknown"},"embeddings":null,"image":null,"video":null,"speech":null,"transcription":null,"realtime":null,"search":null,"tokenization":null},"declared_limits":{"context_window":65536,"maximum_input_tokens":null,"maximum_output_tokens":32768,"maximum_batch":null},"declared_pricing":[],"extended_context_mode":null,"availability":"available","source":"lm-studio:http://127.0.0.1:1234//api/v0/models","observed_at_ms":null,"updated_at_ms":null,"deprecated":null}
{"provider":"lm-studio","route":"lm-studio/primary","wire_model":"gemma-3-12b","aliases":[],"display_name":null,"declared_class":null,"declared_operations":1,"declared_capabilities":{"operations":1,"chat":{"roles":"unknown","mid_session_roles":"unknown","tools":"unknown","structured_output":"unknown","grammar":"unknown","text_verbosity":"unknown","reasoning":"unsupported","input_modalities":{"native":3},"image_input":"unknown","hosted_tools":"unknown","prompt_caching":"unknown","service_tiers":"unknown","sampling":"unknown","safety":"unknown","determinism":"unknown","server_state":"unknown","logprobs":"unknown"},"embeddings":null,"image":null,"video":null,"speech":null,"transcription":null,"realtime":null,"search":null,"tokenization":null},"declared_limits":{"context_window":8192,"maximum_input_tokens":null,"maximum_output_tokens":8192,"maximum_batch":null},"declared_pricing":[],"extended_context_mode":null,"availability":"available","source":"lm-studio:http://127.0.0.1:1234//api/v0/models","observed_at_ms":null,"updated_at_ms":null,"deprecated":null}
{"provider":"lm-studio","route":"lm-studio/primary","wire_model":"meta-llama-3.1-8b-instruct","aliases":[],"display_name":null,"declared_class":null,"declared_operations":1,"declared_capabilities":{"operations":1,"chat":{"roles":"unknown","mid_session_roles":"unknown","tools":"unknown","structured_output":"unknown","grammar":"unknown","text_verbosity":"unknown","reasoning":"unsupported","input_modalities":"unknown","image_input":"unknown","hosted_tools":"unknown","prompt_caching":"unknown","service_tiers":"unknown","sampling":"unknown","safety":"unknown","determinism":"unknown","server_state":"unknown","logprobs":"unknown"},"embeddings":null,"image":null,"video":null,"speech":null,"transcription":null,"realtime":null,"search":null,"tokenization":null},"declared_limits":{"context_window":4096,"maximum_input_tokens":null,"maximum_output_tokens":4096,"maximum_batch":null},"declared_pricing":[],"extended_context_mode":null,"availability":"available","source":"lm-studio:http://127.0.0.1:1234//api/v0/models","observed_at_ms":null,"updated_at_ms":null,"deprecated":null}
{"provider":"lm-studio","route":"lm-studio/primary","wire_model":"qwen2-vl-7b-instruct","aliases":[],"display_name":null,"declared_class":null,"declared_operations":1,"declared_capabilities":null,"declared_limits":{"context_window":32768,"maximum_input_tokens":null,"maximum_output_tokens":32768,"maximum_batch":null},"declared_pricing":[],"extended_context_mode":null,"availability":"available","source":"lm-studio:http://127.0.0.1:1234//api/v0/models","observed_at_ms":null,"updated_at_ms":null,"deprecated":null}
{"provider":"lm-studio","route":"lm-studio/primary","wire_model":"stateless","aliases":[],"display_name":null,"declared_class":null,"declared_operations":1,"declared_capabilities":null,"declared_limits":{"context_window":128000,"maximum_input_tokens":null,"maximum_output_tokens":32768,"maximum_batch":null},"declared_pricing":[],"extended_context_mode":null,"availability":"available","source":"lm-studio:http://127.0.0.1:1234//api/v0/models","observed_at_ms":null,"updated_at_ms":null,"deprecated":null}
{"provider":"lm-studio","route":"lm-studio/primary","wire_model":"text-embedding-nomic-embed-text-v1.5","aliases":[],"display_name":null,"declared_class":null,"declared_operations":1,"declared_capabilities":null,"declared_limits":{"context_window":2048,"maximum_input_tokens":null,"maximum_output_tokens":2048,"maximum_batch":null},"declared_pricing":[],"extended_context_mode":null,"availability":"available","source":"lm-studio:http://127.0.0.1:1234//api/v0/models","observed_at_ms":null,"updated_at_ms":null,"deprecated":null}
{"provider":"lm-studio","route":"lm-studio/primary","wire_model":"unloaded-context-length","aliases":[],"display_name":null,"declared_class":null,"declared_operations":1,"declared_capabilities":null,"declared_limits":{"context_window":16384,"maximum_input_tokens":null,"maximum_output_tokens":16384,"maximum_batch":null},"declared_pricing":[],"extended_context_mode":null,"availability":"available","source":"lm-studio:http://127.0.0.1:1234//api/v0/models","observed_at_ms":null,"updated_at_ms":null,"deprecated":null}


## empty
> GET http://127.0.0.1:1234/api/v0/models [-] 
(no rows)
