crates/ai/src/discovery/probe/snapshots/omp_ai__discovery__probe__characterization__ollama_tags_with_show_metadata.snap
---
source: crates/ai/src/discovery/probe/characterization.rs
expression: output
---
> GET http://127.0.0.1:11434/api/tags [-] 
> POST http://127.0.0.1:11434/api/show [application/json] {"model":"broken-show:latest"}
> POST http://127.0.0.1:11434/api/show [application/json] {"model":"deepseek-r1:latest"}
> POST http://127.0.0.1:11434/api/show [application/json] {"model":"llama3.2-vision:11b"}
> POST http://127.0.0.1:11434/api/show [application/json] {"model":"missing-show:latest"}
> POST http://127.0.0.1:11434/api/show [application/json] {"model":"nomic-embed-text:latest"}
> POST http://127.0.0.1:11434/api/show [application/json] {"model":"null-show:latest"}
> POST http://127.0.0.1:11434/api/show [application/json] {"model":"odd-info:latest"}
> POST http://127.0.0.1:11434/api/show [application/json] {"model":"qwen3-coder:30b"}
{"provider":"ollama","route":"ollama/primary","wire_model":"broken-show:latest","aliases":[],"display_name":null,"declared_class":null,"declared_operations":1,"declared_capabilities":{"operations":1,"chat":{"roles":"unknown","mid_session_roles":"unknown","tools":"unknown","structured_output":"unknown","grammar":"unknown","text_verbosity":"unknown","reasoning":"unknown","input_modalities":"unknown","image_input":"unknown","hosted_tools":"unknown","prompt_caching":"unknown","service_tiers":"unknown","sampling":"unknown","safety":"unknown","determinism":"unknown","server_state":"unknown","logprobs":"unknown"},"embeddings":null,"image":null,"video":null,"speech":null,"transcription":null,"realtime":null,"search":null,"tokenization":null},"declared_limits":{"context_window":128000,"maximum_input_tokens":null,"maximum_output_tokens":32768,"maximum_batch":null},"declared_pricing":[],"extended_context_mode":null,"availability":"available","source":"ollama:http://127.0.0.1:11434//api/tags","observed_at_ms":null,"updated_at_ms":null,"deprecated":null}
{"provider":"ollama","route":"ollama/primary","wire_model":"deepseek-r1:latest","aliases":[],"display_name":null,"declared_class":null,"declared_operations":1,"declared_capabilities":{"operations":1,"chat":{"roles":"unknown","mid_session_roles":"unknown","tools":"unknown","structured_output":"unknown","grammar":"unknown","text_verbosity":"unknown","reasoning":{"native":{"features":1,"efforts":[],"minimum_budget_tokens":null,"maximum_budget_tokens":null}},"input_modalities":"unknown","image_input":"unknown","hosted_tools":"unknown","prompt_caching":"unknown","service_tiers":"unknown","sampling":"unknown","safety":"unknown","determinism":"unknown","server_state":"unknown","logprobs":"unknown"},"embeddings":null,"image":null,"video":null,"speech":null,"transcription":null,"realtime":null,"search":null,"tokenization":null},"declared_limits":{"context_window":24576,"maximum_input_tokens":null,"maximum_output_tokens":24576,"maximum_batch":null},"declared_pricing":[],"extended_context_mode":null,"availability":"available","source":"ollama:http://127.0.0.1:11434//api/tags","observed_at_ms":null,"updated_at_ms":null,"deprecated":null}
{"provider":"ollama","route":"ollama/primary","wire_model":"llama3.2-vision:11b","aliases":[],"display_name":null,"declared_class":null,"declared_operations":1,"declared_capabilities":{"operations":1,"chat":{"roles":"unknown","mid_session_roles":"unknown","tools":"unknown","structured_output":"unknown","grammar":"unknown","text_verbosity":"unknown","reasoning":"unsupported","input_modalities":{"native":3},"image_input":"unknown","hosted_tools":"unknown","prompt_caching":"unknown","service_tiers":"unknown","sampling":"unknown","safety":"unknown","determinism":"unknown","server_state":"unknown","logprobs":"unknown"},"embeddings":null,"image":null,"video":null,"speech":null,"transcription":null,"realtime":null,"search":null,"tokenization":null},"declared_limits":{"context_window":131072,"maximum_input_tokens":null,"maximum_output_tokens":32768,"maximum_batch":null},"declared_pricing":[],"extended_context_mode":null,"availability":"available","source":"ollama:http://127.0.0.1:11434//api/tags","observed_at_ms":null,"updated_at_ms":null,"deprecated":null}
{"provider":"ollama","route":"ollama/primary","wire_model":"missing-show:latest","aliases":[],"display_name":null,"declared_class":null,"declared_operations":1,"declared_capabilities":{"operations":1,"chat":{"roles":"unknown","mid_session_roles":"unknown","tools":"unknown","structured_output":"unknown","grammar":"unknown","text_verbosity":"unknown","reasoning":"unknown","input_modalities":"unknown","image_input":"unknown","hosted_tools":"unknown","prompt_caching":"unknown","service_tiers":"unknown","sampling":"unknown","safety":"unknown","determinism":"unknown","server_state":"unknown","logprobs":"unknown"},"embeddings":null,"image":null,"video":null,"speech":null,"transcription":null,"realtime":null,"search":null,"tokenization":null},"declared_limits":{"context_window":128000,"maximum_input_tokens":null,"maximum_output_tokens":32768,"maximum_batch":null},"declared_pricing":[],"extended_context_mode":null,"availability":"available","source":"ollama:http://127.0.0.1:11434//api/tags","observed_at_ms":null,"updated_at_ms":null,"deprecated":null}
{"provider":"ollama","route":"ollama/primary","wire_model":"nomic-embed-text:latest","aliases":[],"display_name":null,"declared_class":null,"declared_operations":1,"declared_capabilities":{"operations":1,"chat":{"roles":"unknown","mid_session_roles":"unknown","tools":"unknown","structured_output":"unknown","grammar":"unknown","text_verbosity":"unknown","reasoning":"unsupported","input_modalities":"unknown","image_input":"unknown","hosted_tools":"unknown","prompt_caching":"unknown","service_tiers":"unknown","sampling":"unknown","safety":"unknown","determinism":"unknown","server_state":"unknown","logprobs":"unknown"},"embeddings":null,"image":null,"video":null,"speech":null,"transcription":null,"realtime":null,"search":null,"tokenization":null},"declared_limits":{"context_window":2048,"maximum_input_tokens":null,"maximum_output_tokens":2048,"maximum_batch":null},"declared_pricing":[],"extended_context_mode":null,"availability":"available","source":"ollama:http://127.0.0.1:11434//api/tags","observed_at_ms":null,"updated_at_ms":null,"deprecated":null}
{"provider":"ollama","route":"ollama/primary","wire_model":"null-show:latest","aliases":[],"display_name":null,"declared_class":null,"declared_operations":1,"declared_capabilities":{"operations":1,"chat":{"roles":"unknown","mid_session_roles":"unknown","tools":"unknown","structured_output":"unknown","grammar":"unknown","text_verbosity":"unknown","reasoning":"unknown","input_modalities":"unknown","image_input":"unknown","hosted_tools":"unknown","prompt_caching":"unknown","service_tiers":"unknown","sampling":"unknown","safety":"unknown","determinism":"unknown","server_state":"unknown","logprobs":"unknown"},"embeddings":null,"image":null,"video":null,"speech":null,"transcription":null,"realtime":null,"search":null,"tokenization":null},"declared_limits":{"context_window":4096,"maximum_input_tokens":null,"maximum_output_tokens":4096,"maximum_batch":null},"declared_pricing":[],"extended_context_mode":null,"availability":"available","source":"ollama:http://127.0.0.1:11434//api/tags","observed_at_ms":null,"updated_at_ms":null,"deprecated":null}
{"provider":"ollama","route":"ollama/primary","wire_model":"odd-info:latest","aliases":[],"display_name":null,"declared_class":null,"declared_operations":1,"declared_capabilities":{"operations":1,"chat":{"roles":"unknown","mid_session_roles":"unknown","tools":"unknown","structured_output":"unknown","grammar":"unknown","text_verbosity":"unknown","reasoning":"unsupported","input_modalities":{"native":3},"image_input":"unknown","hosted_tools":"unknown","prompt_caching":"unknown","service_tiers":"unknown","sampling":"unknown","safety":"unknown","determinism":"unknown","server_state":"unknown","logprobs":"unknown"},"embeddings":null,"image":null,"video":null,"speech":null,"transcription":null,"realtime":null,"search":null,"tokenization":null},"declared_limits":{"context_window":7777,"maximum_input_tokens":null,"maximum_output_tokens":7777,"maximum_batch":null},"declared_pricing":[],"extended_context_mode":null,"availability":"available","source":"ollama:http://127.0.0.1:11434//api/tags","observed_at_ms":null,"updated_at_ms":null,"deprecated":null}
{"provider":"ollama","route":"ollama/primary","wire_model":"qwen3-coder:30b","aliases":[],"display_name":"Qwen 3 Coder","declared_class":null,"declared_operations":1,"declared_capabilities":{"operations":1,"chat":{"roles":"unknown","mid_session_roles":"unknown","tools":"unknown","structured_output":"unknown","grammar":"unknown","text_verbosity":"unknown","reasoning":"unsupported","input_modalities":"unknown","image_input":"unknown","hosted_tools":"unknown","prompt_caching":"unknown","service_tiers":"unknown","sampling":"unknown","safety":"unknown","determinism":"unknown","server_state":"unknown","logprobs":"unknown"},"embeddings":null,"image":null,"video":null,"speech":null,"transcription":null,"realtime":null,"search":null,"tokenization":null},"declared_limits":{"context_window":262144,"maximum_input_tokens":null,"maximum_output_tokens":32768,"maximum_batch":null},"declared_pricing":[],"extended_context_mode":null,"availability":"available","source":"ollama:http://127.0.0.1:11434//api/tags","observed_at_ms":null,"updated_at_ms":null,"deprecated":null}
